src/chainrepublik/agents/VM/PARSER/GRAMMAR/LANG/testParser.java
// Generated from /Users/technicalsupport/Documents/NetBeansProjects/chainrepublik/src/chainrepublik/agents/test.g4 by ANTLR 4.7
package chainrepublik.agents.VM.PARSER.GRAMMAR.LANG;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class testParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, SYS_DATA_COM=52, 
		SYS_DATA_BLOCK=53, SYS_DATA_MES=54, SYS_DATA_TRANS=55, BREAK=56, STR_FUNC=57, 
		MATH_FUNC=58, ARRAY_FUNC=59, CRYPTO_FUNC=60, MATH_OP=61, ASSIGN_OP=62, 
		COMP_OP=63, BITWISE_OP=64, LOGIC_OP=65, INCDEC_OP=66, NOT_OP=67, TRUE=68, 
		FALSE=69, VAR=70, CHAR_SEQ=71, INT=72, EQUAL=73, COL_NAME=74, DB_STR=75, 
		DB_COMP=76, TAB_NAME=77, WS=78;
	public static final int
		RULE_program = 0, RULE_functions = 1, RULE_function_user = 2, RULE_function_init = 3, 
		RULE_function_onTrans = 4, RULE_function_onMes = 5, RULE_function_onBlock = 6, 
		RULE_function_cleanup = 7, RULE_lines = 8, RULE_line = 9, RULE_func_call = 10, 
		RULE_predef_func = 11, RULE_sys_query = 12, RULE_sys_query_comp = 13, 
		RULE_assign = 14, RULE_globals = 15, RULE_global_assign = 16, RULE_global_var = 17, 
		RULE_expr_math = 18, RULE_expr_comp = 19, RULE_stat_if = 20, RULE_stat_for = 21, 
		RULE_stat_while = 22, RULE_stat_switch = 23, RULE_func_params = 24, RULE_params = 25, 
		RULE_var_value = 26, RULE_number = 27, RULE_dec = 28, RULE_var = 29, RULE_var_array = 30, 
		RULE_var_function = 31, RULE_array = 32, RULE_array_var = 33, RULE_string = 34, 
		RULE_bool = 35, RULE_misc_var = 36, RULE_ret = 37, RULE_sys_data = 38;
	public static final String[] ruleNames = {
		"program", "functions", "function_user", "function_init", "function_onTrans", 
		"function_onMes", "function_onBlock", "function_cleanup", "lines", "line", 
		"func_call", "predef_func", "sys_query", "sys_query_comp", "assign", "globals", 
		"global_assign", "global_var", "expr_math", "expr_comp", "stat_if", "stat_for", 
		"stat_while", "stat_switch", "func_params", "params", "var_value", "number", 
		"dec", "var", "var_array", "var_function", "array", "array_var", "string", 
		"bool", "misc_var", "ret", "sys_data"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Agent'", "'{'", "'}'", "'function'", "'('", "')'", "'function init()'", 
		"'function onTrans()'", "'function onMes()'", "'function onBlock()'", 
		"'function cleanup()'", "';'", "'print'", "'exit'", "'query'", "','", 
		"'balance'", "'send'", "'mes'", "'email'", "'callURL'", "'reject_trans'", 
		"'()'", "'sysinfo'", "'getPrice'", "'trade'", "'dividends'", "'renew'", 
		"'nextRow'", "'getCol'", "'SELECT * FROM '", "' WHERE '", "'var'", "'this'", 
		"'.'", "'if'", "'else'", "'for'", "'while'", "'switch'", "'case'", "':'", 
		"'['", "']'", "'MATH'", "'CRYPTO'", "'return'", "'SYS.BLOCK.'", "'SYS.MES.'", 
		"'SYS.TRANS.'", "'SYS.COM.'", null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "'!'", "'true'", "'false'", 
		null, null, null, "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "SYS_DATA_COM", "SYS_DATA_BLOCK", "SYS_DATA_MES", 
		"SYS_DATA_TRANS", "BREAK", "STR_FUNC", "MATH_FUNC", "ARRAY_FUNC", "CRYPTO_FUNC", 
		"MATH_OP", "ASSIGN_OP", "COMP_OP", "BITWISE_OP", "LOGIC_OP", "INCDEC_OP", 
		"NOT_OP", "TRUE", "FALSE", "VAR", "CHAR_SEQ", "INT", "EQUAL", "COL_NAME", 
		"DB_STR", "DB_COMP", "TAB_NAME", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "test.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public testParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public GlobalsContext globals() {
			return getRuleContext(GlobalsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__0);
			setState(79);
			match(T__1);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__32) {
				{
				setState(80);
				globals();
				}
			}

			setState(83);
			functions();
			setState(84);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionsContext extends ParserRuleContext {
		public List<Function_userContext> function_user() {
			return getRuleContexts(Function_userContext.class);
		}
		public Function_userContext function_user(int i) {
			return getRuleContext(Function_userContext.class,i);
		}
		public Function_initContext function_init() {
			return getRuleContext(Function_initContext.class,0);
		}
		public Function_onTransContext function_onTrans() {
			return getRuleContext(Function_onTransContext.class,0);
		}
		public Function_onMesContext function_onMes() {
			return getRuleContext(Function_onMesContext.class,0);
		}
		public Function_onBlockContext function_onBlock() {
			return getRuleContext(Function_onBlockContext.class,0);
		}
		public Function_cleanupContext function_cleanup() {
			return getRuleContext(Function_cleanupContext.class,0);
		}
		public FunctionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitFunctions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionsContext functions() throws RecognitionException {
		FunctionsContext _localctx = new FunctionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(86);
				function_user();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(92);
				function_init();
				}
			}

			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(95);
				function_onTrans();
				}
			}

			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(98);
				function_onMes();
				}
			}

			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(101);
				function_onBlock();
				}
			}

			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(104);
				function_cleanup();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_userContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(testParser.VAR, 0); }
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public Func_paramsContext func_params() {
			return getRuleContext(Func_paramsContext.class,0);
		}
		public RetContext ret() {
			return getRuleContext(RetContext.class,0);
		}
		public Function_userContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_user; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitFunction_user(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_userContext function_user() throws RecognitionException {
		Function_userContext _localctx = new Function_userContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function_user);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__3);
			setState(108);
			match(VAR);
			setState(109);
			match(T__4);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(110);
				func_params();
				}
			}

			setState(113);
			match(T__5);
			setState(114);
			match(T__1);
			setState(115);
			lines();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__46) {
				{
				setState(116);
				ret();
				}
			}

			setState(119);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_initContext extends ParserRuleContext {
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public Function_initContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_init; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitFunction_init(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_initContext function_init() throws RecognitionException {
		Function_initContext _localctx = new Function_initContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__6);
			setState(122);
			match(T__1);
			setState(123);
			lines();
			setState(124);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_onTransContext extends ParserRuleContext {
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public Function_onTransContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_onTrans; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitFunction_onTrans(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_onTransContext function_onTrans() throws RecognitionException {
		Function_onTransContext _localctx = new Function_onTransContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function_onTrans);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__7);
			setState(127);
			match(T__1);
			setState(128);
			lines();
			setState(129);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_onMesContext extends ParserRuleContext {
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public Function_onMesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_onMes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitFunction_onMes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_onMesContext function_onMes() throws RecognitionException {
		Function_onMesContext _localctx = new Function_onMesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_onMes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__8);
			setState(132);
			match(T__1);
			setState(133);
			lines();
			setState(134);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_onBlockContext extends ParserRuleContext {
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public Function_onBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_onBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitFunction_onBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_onBlockContext function_onBlock() throws RecognitionException {
		Function_onBlockContext _localctx = new Function_onBlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_function_onBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__9);
			setState(137);
			match(T__1);
			setState(138);
			lines();
			setState(139);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_cleanupContext extends ParserRuleContext {
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public Function_cleanupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_cleanup; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitFunction_cleanup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_cleanupContext function_cleanup() throws RecognitionException {
		Function_cleanupContext _localctx = new Function_cleanupContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function_cleanup);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__10);
			setState(142);
			match(T__1);
			setState(143);
			lines();
			setState(144);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinesContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public LinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lines; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitLines(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinesContext lines() throws RecognitionException {
		LinesContext _localctx = new LinesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_lines);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 13)) & ~0x3f) == 0 && ((1L << (_la - 13)) & ((1L << (T__12 - 13)) | (1L << (T__13 - 13)) | (1L << (T__14 - 13)) | (1L << (T__16 - 13)) | (1L << (T__17 - 13)) | (1L << (T__18 - 13)) | (1L << (T__19 - 13)) | (1L << (T__20 - 13)) | (1L << (T__21 - 13)) | (1L << (T__23 - 13)) | (1L << (T__24 - 13)) | (1L << (T__25 - 13)) | (1L << (T__26 - 13)) | (1L << (T__27 - 13)) | (1L << (T__28 - 13)) | (1L << (T__29 - 13)) | (1L << (T__33 - 13)) | (1L << (T__35 - 13)) | (1L << (T__37 - 13)) | (1L << (T__38 - 13)) | (1L << (T__39 - 13)) | (1L << (VAR - 13)))) != 0)) {
				{
				{
				setState(146);
				line();
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public Stat_ifContext stat_if() {
			return getRuleContext(Stat_ifContext.class,0);
		}
		public Stat_forContext stat_for() {
			return getRuleContext(Stat_forContext.class,0);
		}
		public Stat_whileContext stat_while() {
			return getRuleContext(Stat_whileContext.class,0);
		}
		public Stat_switchContext stat_switch() {
			return getRuleContext(Stat_switchContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_line);
		try {
			setState(162);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				assign();
				setState(153);
				match(T__11);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				func_call();
				setState(156);
				match(T__11);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(158);
				stat_if();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(159);
				stat_for();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(160);
				stat_while();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(161);
				stat_switch();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_callContext extends ParserRuleContext {
		public Func_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_call; }
	 
		public Func_callContext() { }
		public void copyFrom(Func_callContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class F_predefContext extends Func_callContext {
		public Predef_funcContext predef_func() {
			return getRuleContext(Predef_funcContext.class,0);
		}
		public F_predefContext(Func_callContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitF_predef(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class F_userContext extends Func_callContext {
		public TerminalNode VAR() { return getToken(testParser.VAR, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public F_userContext(Func_callContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof testVisitor ) return ((testVisitor<? extends T>)visitor).visitF_user(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_callContext func_call() throws RecognitionException {
		Func_callContext _localctx = new Func_callContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_func_call);
		try {
			setState(170);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__12:
			case T__13:
			case T__14:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
				_localctx = new F_predefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(164);
				predef_func();
				}
				break;
			case VAR:
				_localctx = new F_userContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				match(VAR);
				setState(166);
				match(T__4);
				setState(167);
				params();
				setState(168);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
